# hades_save_manager

./: .coverage  AGENTS.md  README.md  cli.py  core.py  core_original.py  hades  hades.py  hades_cli.py  hades_tui.py  main.py  pyproject.toml  test_runner.py  tui.py
cli/: __init__.py  cli.py
core/: __init__.py  config.py  constants.py  logger.py  metadata_handler.py  snapshot_manager.py  tag_manager.py
tests/: conftest.py  test_simple.py  test_simple_integration.py  test_snapshot_manager.py  test_snapshot_working.py  test_tag_manager.py  test_tag_working.py
tui/: __init__.py  colors.py  controllers.py  drawer.py  main.py  main_original.py  panes.py  ui_helpers.py  ui_state.py
